Add condition for bot config entry ID check
Add a condition to check bot configuration entry ID.

--- a/telegram_to_do_list.yaml
+++ b/telegram_to_do_list.yaml
@@ -63,7 +63,10 @@ trigger:
   - platform: event
     event_type: telegram_text
 
-condition: []
+condition:
+  - condition: template
+    value_template: >
+      {{ trigger.event.data.bot.config_entry_id == bot_config_id }}
 
 action:
   - choose:
