--- a/telegram_todo_ru.yaml
+++ b/telegram_todo_ru.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Telegram To-do List (Reply cmds split)
+  name: Telegram To-do List(ru)
   description: >
     Управление списком покупок (To-do) через Telegram.
     - Inline-кнопки для отметки и переключения.
@@ -33,7 +33,7 @@ blueprint:
     bot_config_entry_id:
       name: Config Entry ID бота
       description: >
-        Уникальный ID настройки бота (например: 01KC736CV60QW39DX3A4FHNW0K).
+        Уникальный ID настройки бота.
       selector:
         text: {}
 
