Update timeout setting to 90 seconds
Increased timeout from 30 seconds to 90 seconds.

--- a/telegram_todo_ru.yaml
+++ b/telegram_todo_ru.yaml
@@ -48,6 +48,7 @@ blueprint:
 
 mode: restart
 max_exceeded: silent
+timeout: '00:01:30'  # 90 секунд вместо 30
 
 variables:
   todo_entity: !input todo_entity
