--- a/telegram_todo_ru.yaml
+++ b/telegram_todo_ru.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Telegram To-do List(ru)
+  name: Telegram To-do List (Reply cmds split)
   description: >
     Управление списком покупок (To-do) через Telegram.
     - Inline-кнопки для отметки и переключения.
@@ -18,10 +18,9 @@ blueprint:
 
     telegram_chat_id:
       name: Telegram chat_id
-      description: ID чата (число или несколько через запятую), куда слать сообщения.
+      description: ID чата (число), куда слать сообщения.
       selector:
-        text:
-          multiple: true
+        text: {}
 
     list_command:
       name: Команда для списка
@@ -46,12 +45,12 @@ blueprint:
             - input_text
             - input_number
 
-mode: restart
-max_exceeded: silent
+mode: queued
+max: 5
 
 variables:
   todo_entity: !input todo_entity
-  telegram_chat_ids: !input telegram_chat_id
+  telegram_chat_id: !input telegram_chat_id
   list_command: !input list_command
   bot_config_id: !input bot_config_entry_id
   last_message_id_helper: !input last_message_id_helper
@@ -67,10 +66,32 @@ trigger:
 condition:
   - condition: template
     value_template: >
-      {{ trigger.event.data.bot.config_entry_id == bot_config_id 
-         and trigger.event.data.chat_id | string in telegram_chat_ids }}
+      {{ trigger.event.data.bot.config_entry_id == bot_config_id }}
 
 action:
+  # ----------------------------------------------------------------
+  # 0. Команда /kb — инициализация reply-клавиатуры
+  # ----------------------------------------------------------------
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: >
+              {{ trigger.event.event_type == 'telegram_command'
+                 and trigger.event.data.command == '/kb' }}
+        sequence:
+          - action: telegram_bot.send_message
+            continue_on_error: true
+            data:
+              config_entry_id: "{{ bot_config_id }}"
+              target: "{{ trigger.event.data.chat_id }}"
+              keyboard:
+                - '📜 Показать список'
+                - '🛒 Только активные'
+                - '📜 Показать все'
+                - '🗑 Очистить завершенные'
+                - '🔥 Очистить всё'
+              message: "Клавиатура активирована ✅"
+
   - choose:
       # ----------------------------------------------------------------
       # 1. Команда /list (то же, что "🛒 Только активные")
@@ -107,9 +128,10 @@ action:
                 {{ ns.rows }}
 
           - action: telegram_bot.send_message
+            continue_on_error: true
             data:
               config_entry_id: "{{ bot_config_id }}"
-              target: "{{ trigger.event.data.chat_id }}"
+              target: "{{ telegram_chat_id }}"
               message: "{{ header_text }}"
               inline_keyboard: "{{ list_keyboard }}"
             response_variable: send_resp
@@ -221,17 +243,19 @@ action:
                       {{ last_msg_id_val not in ['', '0', 'unknown', 'unavailable', None] }}
                 sequence:
                   - action: telegram_bot.edit_message
+                    continue_on_error: true
                     data:
                       config_entry_id: "{{ bot_config_id }}"
-                      chat_id: "{{ trigger.event.data.chat_id }}"
+                      chat_id: "{{ telegram_chat_id }}"
                       message_id: "{{ last_msg_id_val | int }}"
                       message: "{{ header_text_new }}"
                       inline_keyboard: "{{ list_keyboard_new }}"
             default:
               - action: telegram_bot.send_message
+                continue_on_error: true
                 data:
                   config_entry_id: "{{ bot_config_id }}"
-                  target: "{{ trigger.event.data.chat_id }}"
+                  target: "{{ telegram_chat_id }}"
                   message: "{{ header_text_new }}"
                   inline_keyboard: "{{ list_keyboard_new }}"
                 response_variable: send_resp_new
@@ -290,6 +314,7 @@ action:
                     value_template: "{{ msg_id > 0 }}"
                 sequence:
                   - action: telegram_bot.delete_message
+                    continue_on_error: true
                     data:
                       chat_id: "{{ chat_id }}"
                       message_id: "{{ msg_id }}"
@@ -326,9 +351,10 @@ action:
                         {{ ns.rows }}
 
                   - action: telegram_bot.send_message
+                    continue_on_error: true
                     data:
                       config_entry_id: "{{ bot_config_id }}"
-                      target: "{{ trigger.event.data.chat_id }}"
+                      target: "{{ telegram_chat_id }}"
                       message: "{{ header_cmd }}"
                       inline_keyboard: "{{ kb_cmd }}"
                     response_variable: send_resp_cmd
@@ -383,9 +409,10 @@ action:
                         {{ ns.rows }}
 
                   - action: telegram_bot.send_message
+                    continue_on_error: true
                     data:
                       config_entry_id: "{{ bot_config_id }}"
-                      target: "{{ trigger.event.data.chat_id }}"
+                      target: "{{ telegram_chat_id }}"
                       message: "{{ header_all }}"
                       inline_keyboard: "{{ kb_all }}"
 
@@ -398,9 +425,10 @@ action:
                     target:
                       entity_id: "{{ todo_entity }}"
                   - action: telegram_bot.send_message
+                    continue_on_error: true
                     data:
                       config_entry_id: "{{ bot_config_id }}"
-                      target: "{{ trigger.event.data.chat_id }}"
+                      target: "{{ telegram_chat_id }}"
                       message: "✅ Завершенные пункты удалены."
 
               # 🔥 Очистить всё
@@ -421,9 +449,10 @@ action:
                           data:
                             item: "{{ repeat.item.uid }}"
                   - action: telegram_bot.send_message
+                    continue_on_error: true
                     data:
                       config_entry_id: "{{ bot_config_id }}"
-                      target: "{{ trigger.event.data.chat_id }}"
+                      target: "{{ telegram_chat_id }}"
                       message: "🔥 Весь список очищен."
 
       # ----------------------------------------------------------------
@@ -525,6 +554,7 @@ action:
                 {{ ns.rows }}
 
           - action: telegram_bot.edit_message
+            continue_on_error: true
             data:
               config_entry_id: "{{ bot_config_id }}"
               chat_id: "{{ chat_id }}"
@@ -533,6 +563,7 @@ action:
               inline_keyboard: "{{ keyboard_cb }}"
 
           - action: telegram_bot.answer_callback_query
+            continue_on_error: true
             data:
               config_entry_id: "{{ bot_config_id }}"
               callback_query_id: "{{ trigger.event.data.id }}"
